--- a/assets/login.css
+++ b/assets/login.css
@@ -1,20 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-*{
-   
-        --col1: rgb(242, 1, 91);
-        --col2: rgb(243, 1, 179);
-        --col3: rgb(237, 2, 241);
-        --col4: rgb(121, 5, 242);
-        --col5: rgb(4, 3, 141);
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
+* {
+  --col1: rgb(242, 1, 91);
+  --col2: rgb(243, 1, 179);
+  --col3: rgb(237, 2, 241);
+  --col4: rgb(121, 5, 242);
+  --col5: rgb(4, 3, 141);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 *::-webkit-scrollbar {
-    display: none;
-  }
-html,body{
+  display: none;
+}
+html,
+body {
   display: grid;
   height: 100%;
   width: 100%;
@@ -29,30 +29,30 @@ html,body{
   background-repeat: no-repeat;
   background-size: cover;
 }
-::selection{
+::selection {
   background: #8842fa;
   color: #fff;
 }
-.wrapper{
+.wrapper {
   overflow: hidden;
   max-width: 390px;
   background: #fff;
   padding: 30px;
   border-radius: 5px;
-  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
 }
-.wrapper .title-text{
+.wrapper .title-text {
   display: flex;
   width: 200%;
 }
-.wrapper .title{
+.wrapper .title {
   width: 50%;
   font-size: 35px;
   font-weight: 600;
   text-align: center;
-  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-.wrapper .slide-controls{
+.wrapper .slide-controls {
   position: relative;
   display: flex;
   height: 50px;
@@ -63,7 +63,7 @@ html,body{
   border: 1px solid lightgrey;
   border-radius: 5px;
 }
-.slide-controls .slide{
+.slide-controls .slide {
   height: 100%;
   width: 100%;
   color: #fff;
@@ -75,10 +75,10 @@ html,body{
   z-index: 1;
   transition: all 0.6s ease;
 }
-.slide-controls label.signup{
+.slide-controls label.signup {
   color: #000;
 }
-.slide-controls .slider-tab{
+.slide-controls .slider-tab {
   position: absolute;
   height: 100%;
   width: 50%;
@@ -86,47 +86,47 @@ html,body{
   z-index: 0;
   border-radius: 5px;
   background: -webkit-linear-gradient(left, #272b63, #364e9e);
-  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-input[type="radio"]{
+input[type="radio"] {
   display: none;
 }
-#signup:checked ~ .slider-tab{
+#signup:checked ~ .slider-tab {
   left: 50%;
 }
-#signup:checked ~ label.signup{
+#signup:checked ~ label.signup {
   color: #fff;
   cursor: default;
   user-select: none;
 }
-#signup:checked ~ label.login{
+#signup:checked ~ label.login {
   color: #000;
 }
-#login:checked ~ label.signup{
+#login:checked ~ label.signup {
   color: #000;
 }
-#login:checked ~ label.login{
+#login:checked ~ label.login {
   cursor: default;
   user-select: none;
 }
-.wrapper .form-container{
+.wrapper .form-container {
   width: 100%;
   overflow: hidden;
 }
-.form-container .form-inner{
+.form-container .form-inner {
   display: flex;
   width: 200%;
 }
-.form-container .form-inner form{
+.form-container .form-inner form {
   width: 50%;
-  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-.form-inner form .field{
+.form-inner form .field {
   height: 50px;
   width: 100%;
   margin-top: 20px;
 }
-.form-inner form .field input{
+.form-inner form .field input {
   height: 100%;
   width: 100%;
   outline: none;
@@ -137,53 +137,59 @@ input[type="radio"]{
   font-size: 17px;
   transition: all 0.3s ease;
 }
-.form-inner form .field input:focus{
+.form-inner form .field input:focus {
   border-color: #9983fc;
   /* box-shadow: inset 0 0 3px #fb6aae; */
 }
-.form-inner form .field input::placeholder{
+.form-inner form .field input::placeholder {
   color: #999;
   transition: all 0.3s ease;
 }
-form .field input:focus::placeholder{
+form .field input:focus::placeholder {
   color: #b3b3b3;
 }
-.form-inner form .pass-link{
+.form-inner form .pass-link {
   margin-top: 5px;
 }
-.form-inner form .signup-link{
+.form-inner form .signup-link {
   text-align: center;
   margin-top: 30px;
 }
 .form-inner form .pass-link a,
-.form-inner form .signup-link a{
+.form-inner form .signup-link a {
   color: #433a79;
   text-decoration: none;
 }
 .form-inner form .pass-link a:hover,
-.form-inner form .signup-link a:hover{
+.form-inner form .signup-link a:hover {
   text-decoration: underline;
 }
-form .btn{
+form .btn {
   height: 50px;
   width: 100%;
   border-radius: 5px;
   position: relative;
   overflow: hidden;
 }
-form .btn .btn-layer{
+form .btn .btn-layer {
   height: 100%;
   width: 300%;
   position: absolute;
   left: -100%;
-  background: -webkit-linear-gradient(right, #5d45b2, #2c2c8d, #4c45b2, #5e42fa);
+  background: -webkit-linear-gradient(
+    right,
+    #5d45b2,
+    #2c2c8d,
+    #4c45b2,
+    #5e42fa
+  );
   border-radius: 5px;
-  transition: all 0.4s ease;;
+  transition: all 0.4s ease;
 }
-form .btn:hover .btn-layer{
+form .btn:hover .btn-layer {
   left: 0;
 }
-form .btn input[type="submit"]{
+form .btn input[type="submit"] {
   height: 100%;
   width: 100%;
   z-index: 1;
